<resources>
    <string name="app_name">GithubRepo</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <string name="msg_users_list_is_empty">Empty!</string>
    <string name="msg_fetch_users_list_has_error">Has Error!</string>
    <string name="users_list_fragment_title">Github users</string>
    <string name="user_repos_fragment_title">Github Repos</string>
    <string name="user_commit_fragment_title">Repo commits</string>
    <string name="lbl_total_count">Total Count</string>
    <string name="repository_name">Repository Name</string>
    <string name="repository_details">Repository Details</string>
    <string name="commit_message">Commit Message : </string>
    <string name="commit_hash">Commit hash : </string>
    <string name="repo_author">Author : </string>
</resources>