<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/usersListFragment">

    <fragment
        android:id="@+id/usersListFragment"
        android:name="com.example.githubrepo.presentation.datasource.userList.UsersListFragment"
        android:label="@string/users_list_fragment_title"
        tools:layout="@layout/fragment_users_list">

        <action
            android:id="@+id/action_usersListFragment_to_SecondFragment"
            app:destination="@id/userReposFragment" />
    </fragment>

    <fragment android:id="@+id/userReposFragment"
        android:name="com.example.githubrepo.presentation.datasource.userRepos.UserReposFragment"
        android:label="@string/user_repos_fragment_title"
        tools:layout="@layout/fragment_user_repos">

        <argument
            android:name="username"
            app:argType="string" />

        <action
            android:id="@+id/action_userReposFragment_to_usersListFragment"
            app:destination="@id/usersListFragment" />

        <action
            android:id="@+id/action_userRepoFragment_to_repoCommitFragment"
            app:destination="@id/repoCommitFragment" />
    </fragment>

    <fragment android:id="@+id/repoCommitFragment"
        android:name="com.example.githubrepo.presentation.datasource.repoCommits.RepoCommitsFragment"
        android:label="@string/user_commit_fragment_title"
        tools:layout="@layout/fragment_repo_commits">

        <argument
            android:name="owner"
            app:argType="string" />

        <argument
            android:name="repo"
            app:argType="string" />
        <action
            android:id="@+id/action_repoCommitFragment_to_userRepoFragment"
            app:destination="@id/userReposFragment" />
    </fragment>
</navigation>