<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:cardUseCompatPadding="true">

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="1dp"
                android:background="@android:color/white"
                android:gravity="center_vertical"
                android:orientation="horizontal">

            <ImageView
                    android:id="@+id/userAvatar"
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/app_name" />

            <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:padding="@dimen/padding">

                <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                    <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:orientation="vertical">

                        <TextView
                                android:id="@+id/repoName"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/repository_name"
                                android:textColor="@android:color/black"
                                android:textStyle="bold"
                                android:textSize="@dimen/fab_margin"/>

                        <TextView
                                android:id="@+id/repoDetails"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/repository_details" />

                    </LinearLayout>
                </LinearLayout>

            </LinearLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</FrameLayout>